--- a/vendor_app/pubspec.yaml
+++ b/vendor_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sizer: ^2.0.15
   go_router: ^10.1.2
   intl: ^0.18.1
+  file_picker: ^5.5.0
 
 dev_dependencies:
   flutter_test:
