--- a/vendor_app/pubspec.yaml
+++ b/vendor_app/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   go_router: ^10.1.2
   intl: ^0.18.1
   file_picker: ^5.5.0
+  pin_code_fields: ^8.0.1
+  awesome_snackbar_content: ^0.1.3
+  shared_preferences: ^2.2.1
+  animated_bottom_navigation_bar: ^1.1.0
 
 dev_dependencies:
   flutter_test:
