--- a/vendor_app/pubspec.yaml
+++ b/vendor_app/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   awesome_snackbar_content: ^0.1.3
   shared_preferences: ^2.2.1
   animated_bottom_navigation_bar: ^1.1.0
+  cloud_firestore: ^4.9.2
+  firebase_core: ^2.16.0
 
 dev_dependencies:
   flutter_test:
