--- a/vendor_app/pubspec.yaml
+++ b/vendor_app/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   animated_bottom_navigation_bar: ^1.1.0
   cloud_firestore: ^4.9.2
   firebase_core: ^2.16.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
