--- a/vendor_app/pubspec.yaml
+++ b/vendor_app/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   cloud_firestore: ^4.9.2
   firebase_core: ^2.16.0
   get: ^4.6.6
+  dropdown_search: ^5.0.6
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
