--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   get: ^4.6.6
   dropdown_search: ^5.0.6
   table_calendar: ^3.0.9
+  mime: ^1.0.4
 
 dev_dependencies:
   flutter_test:
