--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   dropdown_search: ^5.0.6
   table_calendar: ^3.0.9
   mime: ^1.0.4
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
