--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,10 +27,10 @@
         <activity android:name="com.apptreesoftware.mapview.MapActivity" />
                 <meta-data
     android:name="firebase_messaging_auto_init_enabled"
-    android:value="false" />
+    android:value="true" />
 <meta-data
     android:name="firebase_analytics_collection_enabled"
-    android:value="false" />
+    android:value="true" />
             <meta-data
   android:name="com.google.firebase.messaging.default_notification_channel_id"
   android:value="high_importance_channel" />
