--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   shared_preferences: ^2.2.1
   animated_bottom_navigation_bar: ^1.1.0
   cloud_firestore: ^4.9.2
-  firebase_core: ^2.16.0
+  firebase_core: ^2.20.0
   get: ^4.6.6
   dropdown_search: ^5.0.6
   table_calendar: ^3.0.9
@@ -53,6 +53,8 @@ dependencies:
   path_provider: ^2.1.1
   geocoding: ^2.1.1
   geolocator: ^10.1.0
+  firebase_messaging: ^14.7.2
+  flutter_local_notifications: ^16.1.0
 
 dev_dependencies:
   flutter_test:
