--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
 <meta-data
     android:name="firebase_analytics_collection_enabled"
     android:value="true" />
+    <meta-data
+          android:name="com.google.firebase.messaging.default_notification_icon"
+          android:resource="@drawable/ic_launcher" />
             <meta-data
   android:name="com.google.firebase.messaging.default_notification_channel_id"
   android:value="high_importance_channel" />
