--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,9 @@ app.*.map.json
 *.cmake
 *.h
 *.cc
+ios/Flutter/Debug.xcconfig
+ios/Flutter/Release.xcconfig
+ios/Podfile
+macos/Flutter/Flutter-Debug.xcconfig
+macos/Flutter/Flutter-Release.xcconfig
+macos/Podfile
