--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   firebase_messaging: ^14.7.6
   flutter_local_notifications: ^16.1.0
   collection: ^1.17.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
