--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,13 +28,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.apptreesoftware.mapview.MapActivity" />
+   
                 <meta-data
     android:name="firebase_messaging_auto_init_enabled"
-    android:value="true" />
+    android:value="false" />
 <meta-data
     android:name="firebase_analytics_collection_enabled"
-    android:value="true" />
+    android:value="false" />
     <meta-data
           android:name="com.google.firebase.messaging.default_notification_icon"
           android:resource="@drawable/ic_launcher" />
