--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   shimmer: ^3.0.0
   profanity_filter: ^2.0.0
   mixpanel_flutter: ^2.2.0
+  image: ^4.1.3
 
 dev_dependencies:
   flutter_test:
